--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ body {
     right: 28px;
     bottom: 18px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
     grid-template-rows: 3fr 2fr;
     gap: 16px 20px;
     z-index: 5;
@@ -294,6 +294,7 @@ body {
     margin-top: 10px;
     margin-bottom: 3px;
     text-transform: uppercase;
+    text-align: center;
 }
 
 /* Spacer between groups */
@@ -304,6 +305,7 @@ body {
     color: #ffffff;
     font-size: 21px;
     line-height: 1.65;
+    text-align: center;
 }
 
 /* Rappel line (with dash) */
@@ -320,7 +322,7 @@ body {
 .doc-section.col-rappels      { grid-column: 1; grid-row: 1; }
 .doc-section.col-promotions   { grid-column: 2; grid-row: 1; }
 .doc-section.col-convocations { grid-column: 3; grid-row: 1; }
-.doc-section.col-arrivees     { grid-column: 1 / 3; grid-row: 2; }
+.doc-section.col-arrivees     { grid-column: 2 / 3; grid-row: 2; }
 .doc-section.col-departs      { grid-column: 3; grid-row: 2; }
 
 /* ---- Placeholder ---- */
